--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "ant-design-vue": "^4.2.3",
+    "axios": "^1.7.4",
     "core-js": "^3.8.3",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.0.4",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue-toastification": "^1.7.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -19,8 +24,11 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "autoprefixer": "^10.4.20",
     "babel-jest": "^27.0.6",
-    "jest": "^27.0.5"
+    "jest": "^27.0.5",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10"
   },
   "browserslist": [
     "> 1%",
