--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.0.4",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue3-google-map": "^0.21.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
