--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "ant-design-vue": "^4.2.3",
     "axios": "^1.7.4",
     "core-js": "^3.8.3",
+    "date-fns": "^3.6.0",
+    "mitt": "^3.0.1",
+    "moment": "^2.30.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue-spinners": "^1.0.2",
+    "vue-toastification": "2.0.0-rc.5",
     "vue3-google-map": "^0.21.0"
   },
   "devDependencies": {
